# experiments-in-code

./: .gitignore  CHANGELOG.md  README.md  cabal-project-template.cabal  experiments-in-code.cabal  hie.yml
app/: Main.hs
src/: Experiments.hs
