cabal-version:   3.0
name:            experiments-in-code
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          etoal83
maintainer:      etoal83@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common shared
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-import-lists -Wcompat

  default-language: GHC2021
  build-depends:    base ^>=4.18.3.0, gnuplot

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules: Experiments

-- other-modules:
-- other-extensions:

executable experiments-in-code
  import:         shared
  hs-source-dirs: app
  main-is:        Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:  experiments-in-code

test-suite experiments-in-code-test
  import:         shared
  hs-source-dirs: test
  main-is:        Main.hs
  type:           exitcode-stdio-1.0

  -- other-modules:
  -- other-extensions:
  build-depends:  experiments-in-code
